0.2.1:

2003-04-14  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c: prefer files from d2 hog over d1 hog

2003-04-11  Bradley Bell  <btb@icculus.org>

	* main/automap.c, main/gamemine.c, main/menu.c: fix compiler
	warnings

0.2.0:

2003-04-11  Bradley Bell  <btb@icculus.org>

	* libmve/mveplay.c: use _sleep instead of sleep on win32

	* Makefile.am, README, README.utils, arch/sdl/digi.c,
	arch/sdl/joy.c, arch/win32/Makefile.am, include/byteswap.h,
	include/cfile.h, include/error.h, libmve/Makefile.am,
	libmve/decoders.h, main/Makefile.am, main/endlevel.c,
	main/endlevel.h, main/playsave.c, misc/fileutil.c:
	utilities/Makefile.am: comments/formatting/dist problems

	* configure.ac: use different defines for os x

2003-04-07  Bradley Bell  <btb@icculus.org>

	* include/error.h, misc/error.c: put some old stuff back in,
	eliminate duplicate error messages

	* main/text.c: don't die on text not found
	formatting

	* main/inferno.c: print some useful info if hog not found, allow
	-help to work if no text available

2003-04-07  Steffen Pohle <stpohle@gmx.net>

	* arch/linux/Makefile.am: revert to previous version, so linux
	joystick works

2003-04-03  Bradley Bell  <btb@icculus.org>

	* main/endlevel.c: fixed exit model scheme yet again

2003-04-02  Bradley Bell  <btb@icculus.org>

	* misc/error.c: call Int3 on Assert

	* main/cntrlcen.c, main/cntrlcen.h, main/gamesave.c: modified
	trigger reader

	* main/wall.c: don't die when trying to toggle nonexistent
	segment... vertigo level 10 is buggy!

	* main/gamemine.c: comments/formatting

2003-03-31  Micah J. Lieske  <MicahJon@compuserve.com>

	* arch/dos/digimm.c, arch/sdl/digi.c, arch/win32/digi.c,
	main/inferno.c: Allow use of 22K sound samples

2003-03-29  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c: default to bitmapped reticle

	* main/bm.c, main/endlevel.c, main/piggy.c, main/piggy.h,
	main/polyobj.c: rewrote endlevel stuff to reread exit model info
	every time
